--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 </head>
 <body>
 	<div class="card">
-		<div class="circle"></div>
-		<div class="content"></div>
+		<div class="circle" style="--clr:#444">
+			<img src="images/TATNEFT.png" class="logo">
+		</div>
+		<div class="content">
+			<h2>Татнефть</h2>
+			<p>«Татнефть» - одна из крупнейших российских нефтяных компаний, в составе которой динамично развиваются нефтегазодобыча, нефтепереработка, нефтегазохимия, шинный бизнес, сеть АЗС, композитный кластер, электроэнергетика, разработка и производство оборудования для нефтегазовой отрасли и блок сервисных структур.  «Татнефть» также участвует в капитале компаний финансового сектора.</p>
+			<a href="#">Explore</a>
+		</div>
 	</div>
 </body>
 </html>
