--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 		<div class="content">
 			<h2>Татнефть</h2>
 			<p>«Татнефть» - одна из крупнейших российских нефтяных компаний, в составе которой динамично развиваются нефтегазодобыча, нефтепереработка, нефтегазохимия, шинный бизнес, сеть АЗС, композитный кластер, электроэнергетика, разработка и производство оборудования для нефтегазовой отрасли и блок сервисных структур.  «Татнефть» также участвует в капитале компаний финансового сектора.</p>
-			<a href="#">Explore</a>
+			<a href="#">Подробнее</a>
 		</div>
+		<img src="images/luxe.png" class="product_img">
 	</div>
 </body>
 </html>
